--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span>Graehl Arts</span>
       </h1>
       <div class='top-nav span5'>
-        <a href = "http://kyle.graehl.org">Blog</a> | <a href = "mailto:graehlarts@gmail.com">graehlarts@gmail.com</a>
+        <a href = "http://kyle.graehl.org">Blog</a> | <a href = "mailto:hello@graehlarts.com">hello@graehlarts.com</a>
       </div>
       <br class='clear' />
     </div>
@@ -148,7 +148,7 @@
             <div class="span3 about">
               <ul>
                 <h2>About</h2>
-                <li><a href="mailto:graehlarts@gmail.com">Contact us</a></li>
+                <li><a href="mailto:hello@graehlarts.com">Contact us</a></li>
                 <li><a href="http://kyle.graehl.org">Blog</a></li>
                 <li><a href="https://github.com/GraehlArts">GraehlArts GitHub</a></li>
                 <li><a href = "https://twitter.com/Graehlarts">@graehlarts</a></li>
