--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         Our passion is producing great software and giving users great experiences
         </p>
         <p>
-         We are experts in modern web technologies. We offer development, support and advice.
+          We are modern web technology experts. Let us support and advise you. We will build your vision.
         </p>
       </div>
     </div>
@@ -45,19 +45,18 @@
 
         <div class = 'row-fluid'>
           <div class='span4'>
-            <h3><a href = "./databases">Data &amp; Databases</a></h3>
+            <h3><a href = "#">Data &amp; Databases</a></h3>
             <p>
             At the core of every business lies data.
             </p>
 
-            <p>With years of experience, managing, storing and making
-            sense of data is in our DNA.
-            </p>
+<p>Managing, storing, and grokking data is in our DNA</p>
+
             <p>We specialize in DynamoDB, PostgreSQL and MySQL.</p>
           </div>
 
           <div class='span4'>
-            <h3><a href = './node'>JavaScript</a></h3>
+            <h3><a href = "#">JavaScript</a></h3>
             <p>
             JavaScript is the language of the web.
             </p>
@@ -68,7 +67,7 @@
           </div>
 
           <div class='span4'>
-            <h3><a href="./testing-continuous-deployment">Open Source</a></h3>
+            <h3><a href="#">Open Source</a></h3>
             <p>
             We make functional, beautiful software systems with Open
             Source
