--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
                 <li><a href="https://chrome.google.com/webstore/detail/web-quake/ibkbfanmkmadbbgggonficloplenbefh">Web Quake</a></li>
                 <li><a href="https://chrome.google.com/webstore/detail/privacy-guard/edcajbacgdcdeecojhlllbgingbjfbmk">Privacy Guard</a></li>
+                <li><a href="http://www.chromebeat.com">Chromebeat</a></li>
 
               </ul>
             </div>
