--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <hr />
 
     <div class="cta jaggy-top jaggy-bottom">
-  <h2>How can we help? - <a href ="mailto:hello@graehlarts.co">Contact Us</a></h2>
+  <h2>How can we help? - <a href ="mailto:hello@graehlarts.com">Contact Us</a></h2>
 </div>
 
 
