--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
 
 <p>Managing, storing, and grokking data is in our DNA</p>
 
-            <p>We specialize in DynamoDB, PostgreSQL and MySQL.</p>
+            <p>We specialize in DynamoDB and PostgreSQL</p>
           </div>
 
           <div class='span4'>
             <h3><a href = "#">JavaScript</a></h3>
             <p>
-            JavaScript is the language of the web.
+            JavaScript today is everywhere.
             </p>
             <p>
-            We build complex, real-world applications purely in JavaScript, both client-side and server-side.
+            We build simple, beautiful applications purely in JavaScript, both client-side and server-side.
             </p>
 
           </div>
@@ -67,8 +67,7 @@
           <div class='span4'>
             <h3><a href="#">Open Source</a></h3>
             <p>
-            We make functional, beautiful software systems with Open
-            Source
+              We believe in open source and freedom.
             </p>
             <p>
               We contribute software to the open source community.
