--- a/index.html
+++ b/index.html
@@ -132,11 +132,14 @@
               <h2>Products</h2>
               <ul>
                 <li><a href="http://jstorrent.com/">JSTorrent</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=org.graehl.passwordmaker">Password Maker (Android)</a></li>
-                <li><a href="https://chrome.google.com/webstore/detail/password-maker/ialikkbbdipamacdpjbjjffohcblhchp">Password Maker (Chrome)</a></li>
 
                 <li><a href="https://chrome.google.com/webstore/detail/web-quake/ibkbfanmkmadbbgggonficloplenbefh">Web Quake</a></li>
                 <li><a href="https://chrome.google.com/webstore/detail/privacy-guard/edcajbacgdcdeecojhlllbgingbjfbmk">Privacy Guard</a></li>
+                <li><a href="https://www.chromebeat.com/app/flv-player/dhogabmliblgpadclikpkjfnnipeebjm">FLV Player</a></li>
+                <li><a href="https://www.chromebeat.com/app/web-server-for-chrome/ofhbbkphhbklhfoeikjpcbhemlocgigb">Web Server Chrome</a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=org.graehl.passwordmaker">Password Maker (Android)</a></li>
+                <li><a href="https://chrome.google.com/webstore/detail/password-maker/ialikkbbdipamacdpjbjjffohcblhchp">Password Maker (Chrome)</a></li>
+
                 <li><a href="http://www.chromebeat.com">Chromebeat</a></li>
 
               </ul>
