--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span>Graehl Arts</span>
       </h1>
       <div class='top-nav span5'>
-        <a href = "http://kyle.graehl.org">Blog</a> | <a href = "mailto:hello@graehlarts.com">hello@graehlarts.com</a>
+        <a href = "http://kyle.graehl.org">Blog</a> | <a href = "mailto:kyle@graehlarts.com">kyle@graehlarts.com</a>
       </div>
       <br class='clear' />
     </div>
@@ -101,7 +101,7 @@
 <hr />
 
     <div class="cta jaggy-top jaggy-bottom">
-  <h2>How can we help? - <a href ="mailto:hello@graehlarts.com">Contact Us</a></h2>
+  <h2>How can we help? - <a href ="mailto:kyle@graehlarts.com">Contact Us</a></h2>
 </div>
 
 
@@ -148,7 +148,7 @@
             <div class="span3 about">
               <ul>
                 <h2>About</h2>
-                <li><a href="mailto:hello@graehlarts.com">Contact us</a></li>
+                <li><a href="mailto:kyle@graehlarts.com">Contact us</a></li>
                 <li><a href="http://kyle.graehl.org">Blog</a></li>
                 <li><a href="https://github.com/GraehlArts">GraehlArts GitHub</a></li>
                 <li><a href = "https://twitter.com/Graehlarts">@graehlarts</a></li>
