--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class='services'>
       <div class='container'>
-        <h2>Featured Product</h2>
+        <h2>Featured Products</h2>
 
 <hr />
 <span style="float:right; margin-left:1em; border:2px solid #08c">
@@ -99,6 +99,28 @@
     </div>
 
 <hr />
+
+
+<hr />
+<span style="float:right; margin-left:1em; border:2px solid #08c">
+        <a href="https://www.mp4cast.com.com">MP4Cast</a>
+</span>
+
+        <p><a href="https://www.mp4cast.com">MP4Cast</a> is an app for Google Chromecast&trade;.
+With it, you can stream your locally stored video files directly to your Chromecast. Other solutions can result in choppy, unplayable videos. With MP4Cast, you can cast full HD 1080p content with no lag and no stuttering.
+</p>
+
+        <p>It runs on any full Chrome browser, Mac, Windows, Linux, ChromeOS, and runs fine even on lower end ARM Chromebooks.</p>
+
+<!--div style="padding:1em; margin:1em; font-style:italic">
+"When it seemed that Chromebook was limited to web browing and little more, JSTorrent comes in and makes it a very powerful and complete gadget. A must have to all downloaders"
+</div-->
+
+      </div>
+    </div>
+
+<hr />
+
 
     <div class="cta jaggy-top jaggy-bottom">
   <h2>How can we help? - <a href ="mailto:kyle@graehlarts.com">Contact Us</a></h2>
