--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ With it, you can stream your locally stored video files directly to your Chromec
               <h2>Products</h2>
               <ul>
                 <li><a href="http://jstorrent.com/">JSTorrent</a></li>
+                <li><a href="https://www.mp4cast.com/">MP4Cast</a></li>
 
                 <li><a href="https://chrome.google.com/webstore/detail/web-quake/ibkbfanmkmadbbgggonficloplenbefh">Web Quake</a></li>
                 <li><a href="https://chrome.google.com/webstore/detail/privacy-guard/edcajbacgdcdeecojhlllbgingbjfbmk">Privacy Guard</a></li>
