--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 
 <p>Managing, storing, and grokking data is in our DNA</p>
 
-            <p>We specialize in DynamoDB and PostgreSQL</p>
           </div>
 
           <div class='span4'>
@@ -75,6 +74,43 @@
           </div>
 
         </div>
+
+        <div class = 'row-fluid'>
+          <div class='span4'>
+            <h3><a href = "#">Python</a></h3>
+            <p>
+              We love Python
+            </p>
+
+<p>Versatile and efficient solutions are at our fingertips</p>
+
+          </div>
+
+          <div class='span4'>
+            <h3><a href = "#">Cloud</a></h3>
+            <p>
+              We can fully manage your deployment
+            </p>
+            <p>
+              We use Google Cloud and Amazon Web Services to make your
+              deployments efficient and secure
+            </p>
+
+          </div>
+
+          <div class='span4'>
+            <h3><a href="#">Security</a></h3>
+            <p>
+              We are security experts
+            </p>
+            <p>
+              We keep up to date so that you don't lose sleep.
+            </p>
+          </div>
+
+        </div>
+
+
       </div>
     </div>
 
@@ -98,10 +134,25 @@
 
 <hr />
 
+<hr />
+<span style="float:right; margin-left:1em; border:2px solid #08c">
+        <a href="https://chrome.google.com/webstore/detail/web-server-for-chrome/ofhbbkphhbklhfoeikjpcbhemlocgigb">Web Server for Chrome</a>
+</span>
+
+        <p><a href="https://chrome.google.com/webstore/detail/web-server-for-chrome/ofhbbkphhbklhfoeikjpcbhemlocgigb">Web Server for Chrome</a> is an app for Google Chrome&trade;.
+
+<p>          It runs anywhere that you have Chrome installed, so you can take it anywhere. It even works on ARM chromebooks.</p>
+
+<p>          It now has the option to listen on the local network, so other computers can access your files. Additionally, it can try and get an internet address.</p>
+
+<p>          Many people use this to do basic web development on a chromebook. It is also handy for sharing files over a local network between computers, or even on the internet.</p>
+
+<p>It is MIT licensed and used in many projects worldwide</p>
+
 
 <hr />
 <span style="float:right; margin-left:1em; border:2px solid #08c">
-        <a href="https://www.mp4cast.com.com">MP4Cast</a>
+        <a href="https://www.mp4cast.com">MP4Cast</a>
 </span>
 
         <p><a href="https://www.mp4cast.com">MP4Cast</a> is an app for Google Chromecast&trade;.
