update privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -1,9 +1,13 @@
 <html>
   <head>
-    <title>JSTorrent Privacy Policy</title>
+    <title>Privacy Policy</title>
   </head>
   <body>
 
+    <p>
+      The following privacy policies are for applications created by <a href="/">Graehl Arts</a>.
+    </p>
+    
     
     <h1 id="jstorrent">JSTorrent Privacy Policy</h1>
 
