update privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -76,6 +76,11 @@
     collect any anonymous usage statistics. It does not transmit any
     information to any third party servers.
 
+    However, you should be aware, that when the "Available on LAN"
+    setting is enabled, other hosts on your local network will have
+    direct access to the directory you selected within the
+    application.
+
     </pre>
 
 
