update privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -127,8 +127,9 @@
     The application never tracks played filenames or file sizes. It is
     only tracking whether a video was played successfully.
     
-    This data is not shared with any other parties. It is used for the
-    sole purpose of tracking errors and improving the product.
+    File names may be sent to a third party server which looks up IMDB
+    (Internet Movie Database) metadata. We plan to add options to
+    allow you to disable or enable this in the future.
 
     </pre>
 
